--- a/badtest.html
+++ b/badtest.html
@@ -11,7 +11,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> <title> :( </title> </head>
 <body>
 <div class="l"> 
-<p>You fail the test. Because you fail the test you end up doing worse on future tests. You're thinking about dropping out of college. </p>
+<p>You fail the test. Because you fail the test you end up doing worse on future tests. You're thinking about dropping out of college. You end up deciding that it's best if you don't go to any lectures. </p>
 </div>
 
 
