--- a/Look.html
+++ b/Look.html
@@ -15,12 +15,12 @@
 Your browser does not support the audio element.
 </audio> 
 <img class="i" src="Todduncloaked.jpg" alt="index"/>
-<div> 
+<div class="l"> 
 <p>"Hello normies" the mysterious figure says. "Woah! It's todd!" says the teach. "you normals think you know good anime? Fucking plebs..." Fight me 1v1" Do you fight him 1v1?  </p>
 </div>
 
 
-<div>
+<div class="r">
 <nav class="navbar navbar-default">
 <ul>
  <div class="n"><li> <a href="Fight.html">Fight him </a></li></div> 
